package domain.materials;

public class StyklisteLinje {







}
